# predictingTrafficCongestion

./: README.md  pyproject.toml
DLmodel/: Transformer.py
code/: custom_loss.py  multitaskLSTM.py  normalization.py  similarity.py  trainingmultitaskLSTM.py
code/conf/: config.yaml
notebook/: EDA.ipynb  checkgpu.ipynb  createPreprocessedData.ipynb  predict_by_transformer.ipynb
